fix: main theme of daisy ui

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -3,6 +3,9 @@
 @source "../views";
 @source "../../content";
 
+@plugin "daisyui" {
+    themes: 'ying'
+}
 
 @plugin "daisyui/theme" {
     name: "ying";
