refactor: change style of footer

--- a/resources/views/_footer.antlers.html
+++ b/resources/views/_footer.antlers.html
@@ -1,8 +1,8 @@
-<footer class="mt-auto w-full flex justify-between self-start p-2 text-sm">
+<footer class="mt-auto w-full flex justify-between self-start p-2 text-xs">
     <span>
         {{ footer:flair }} 
     </span>
-    <div class="ms-auto flex items-center w-fit gap-1">
+    <div class="ms-auto flex items-center w-fit gap-2">
         {{ socials:links }}
         <a class="size-6" href="{{ url }}" target="_blank" title="{{ label }}"> {{ icon }} </a>
         {{ /socials:links}}
