--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -1,15 +1,22 @@
 <!doctype html>
 <html lang="{{ site:short_locale }}">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>{{ title ?? site:name }}</title>
-        {{ vite src="resources/js/site.js|resources/css/site.css" }}
-    </head>
-    <body class="bg-slate-100 dark:bg-gray-800 font-sans leading-normal text-slate-800 dark:text-gray-400">
-        <div class="mx-auto px-2 lg:min-h-screen flex flex-col items-center justify-center">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{{ title ?? site:name }}</title>
+    {{ vite src="resources/js/site.js|resources/css/site.css" }}
+</head>
+
+<body class="bg-base-100 font-sans leading-normal text-base-content">
+    <div class="min-h-screen max-w-screen-md mx-auto px-2 py-2 flex flex-col items-center">
+        {{ partial:nav }}
+        <main class="w-full grow-1 py-8 px-12 border-x-2 border-y-2">
             {{ template_content }}
-        </div>
-    </body>
+        </main>
+        {{ partial:footer }}
+    </div>
+</body>
+
 </html>
