refactor: change destination of the tag badge anchor

--- a/resources/views/journal/show.antlers.html
+++ b/resources/views/journal/show.antlers.html
@@ -6,7 +6,7 @@
 
 
 {{tags}}
-    <a class="badge badge-info" href="{{ url }}">#{{title}}</a>
+    <a class="badge badge-info" href="/tags/{{slug}}">#{{title}}</a>
 {{ /tags}}
 
 <article class="prose prose-lg max-w-none">
