refactor: try to use badge outlined in tags everywhere

--- a/resources/views/tags/index.antlers.html
+++ b/resources/views/tags/index.antlers.html
@@ -6,7 +6,7 @@
 <div class="space-y-4 ms-2 mb-8">
     <div class="flex flex-wrap gap-4">
         {{ taxonomy:tags }}
-            <a class="badge badge-soft badge-primary" href="/tags/{{slug}}">
+            <a class="badge badge-outline badge-info" href="/tags/{{slug}}">
                 #{{title}}
                 <small>{{entries_count}}</small>
             </a>
