refactor: change style of audio player

--- a/resources/views/_audio_player.antlers.html
+++ b/resources/views/_audio_player.antlers.html
@@ -1,5 +1,5 @@
 {{ if youtube_url && show_audio_player }}
-<div class="audio-player-container mb-6 p-4 border-2 border-base-300 bg-base-200 rounded-lg" data-youtube-url="{{ youtube_url }}" data-track-title="{{ audio_title }}">
+<div class="audio-player-container mb-6 p-4 border-2 bg-base-200 rounded-sm" data-youtube-url="{{ youtube_url }}" data-track-title="{{ audio_title }}">
     <!-- Hidden YouTube iframe -->
     <div class="youtube-player sr-only"></div>
     
