--- a/resources/views/about.antlers.html
+++ b/resources/views/about.antlers.html
@@ -1,9 +1,11 @@
+{{ if youtube_url && show_audio_player }}
 <div class="w-full mb-4">
-    <button class="btn btn-sm btn-outline btn-primary mb-2">
+    <button id="play-theme-btn" class="btn btn-sm btn-outline btn-primary mb-2">
         <svg class="size-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"/><circle cx="180" cy="164" r="28" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"/><circle cx="52" cy="196" r="28" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"/><line x1="208" y1="72" x2="80" y2="104" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"/><polyline points="80 196 80 56 208 24 208 164" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"/></svg>
-        Play Theme
+        <span class="play-theme-text">Play Theme</span>
     </button>
 </div>
+{{ /if }}
 
 {{ glide src="{{thematic_image}}" height="400" fit="contain"}}
     <img class="md:float-right md:ms-8 md:me-4 md:my-6 border-2" src="{{url}}" width="{{width}}" height="{{height}}">
