--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="bg-base-100 font-sans leading-normal text-base-content">
-    <div class="min-h-screen max-w-screen-md mx-auto px-2 py-2 flex flex-col items-center">
+    <div class="main-container min-h-screen max-w-screen-md mx-auto px-2 py-2 flex flex-col items-center">
         {{ partial:nav }}
         <main class="w-full grow-1 py-8 px-12 border-x-2 border-y-2">
             {{ template_content }}
